<resources>
    <string name="app_name">Apszone</string>
    <string name="hint_email">Email</string>
    <string name="hint_id">School ID</string>
    <string name="hint_password">Password</string>
    <string name="need_help">Need Help?</string>
    <string name="login">Login</string>
    <string name="error_email_required">Email Required</string>
    <string name="error_id_required">School ID Required</string>
    <string name="error_valid_email">Enter Valid E-mail</string>
    <string name="error_password_required">Password Required</string>
    <string name="toolbar_dashboard">Dashboard</string>
    <string name="toolbar_profile">Profile</string>
    <string name="toolbar_login">Login</string>
    <string name="view_profile">View Profile ></string>
    <string name="school_name">Agrawal Public School</string>
    <string name="text_welcome">Welcome</string>
    <string name="toolbar_timetable">Timetable</string>
    <string name="text_recess">RECESS</string>
    <string name="toolbar_attendance">Attendance</string>
    <string name="sunday">S</string>
    <string name="monday">M</string>
    <string name="tuesday">T</string>
    <string name="wednesday">W</string>
    <string name="thursday">T</string>
    <string name="friday">F</string>
    <string name="saturday">S</string>
    <string name="monthly_attendance">Monthly Attendance</string>
    <string name="present">Present %d</string>
    <string name="absent">Absent %d</string>
    <string name="toolbar_syllabus">Syllabus</string>
    <string name="toolbar_homework">Homework</string>
    <string name="previous_date"><![CDATA[<]]></string>
    <string name="next_date"><![CDATA[>]]></string>
    <string name="toolbar_fees">Fees</string>
    <string name="due_amount">Due Amount</string>
    <string name="paid_amount">Paid Amount</string>
    <string name="monthly_fee">Monthly Fee</string>
    <string name="fee_details">Fee Details</string>
    <string name="date_paid">Date Paid</string>
    <string name="rupee_symbol">\u20B9</string>
    <string name="month">Month</string>
    <string name="status">Status</string>
    <string name="more_info"><u>More Info</u></string>
    <string name="late_fee_notice">*Last date for fee submission is 10th of every month, post this date \u20B9 50 will be fined daily for late fee.</string>
    <string name="ok">OK</string>
    <string name="alert">Alert</string>
    <string name="alert_late_fees">You have not submitted the fees for this month. Please pay the fees before 10th, post this date \u20B9 50 will be fined daily for late fee.</string>
    <string name="toolbar_inbox">Inbox</string>
    <string name="no_internet">Looks like your internet is not working. Please connect to the internet.</string>
    <string name="oh_snap">Oh Snap!</string>
    <string name="select_class">Select Class</string>
    <string name="text_edit_attendance">You have already added the attendance for the date. Do you want to edit the attendance?</string>
    <string name="text_exist_homework">You have already added the homework for the date. Do you want to add for another date?</string>
    <string name="edit_attendance"><u>Edit Attendance</u></string>
    <string name="submit_attendance">Submit Attendance</string>
    <string name="enter_title">Enter Title</string>
    <string name="enter_remarks">Enter Remarks</string>
    <string name="enter_description">Enter Description</string>
    <string name="submit_homework">Submit Homework</string>
    <string name="toolbar_add_homework">Add Homework</string>
    <string name="add_homework"><u>Add Homework</u></string>
    <string name="app_storage_permission_warning_msg">You\'ve previously denied Storage permission.\nTo enable this, click App Settings below and activate Storage under the Permissions menu</string>
    <string name="no_data_found">No data found</string>
    <string name="toolbar_settings">Settings</string>
    <string name="contact_us">Contact</string>
    <string name="contact_us_description">Send us your query here</string>
    <string name="others">Others</string>
    <string name="general">General</string>
    <string name="logout">Logout</string>
    <string name="about_us">About</string>
    <string name="toolbar_contact">Contact</string>
    <string name="phone">Phone</string>
    <string name="phone_description">Give us a call at 9454549454</string>
    <string name="email_description">Shoot an e-mail at contact@apsdeoria.com</string>
    <string name="toolbar_about">About</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="website">Website</string>
    <string name="instagram">Instagram</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="toolbar_reset_password">Reset Password</string>
    <string name="dob">Date of Birth</string>
    <string name="enter_dob">Enter student date of birth (YYYY-MM-DD) </string>
    <string name="school_id">Enter Student School ID</string>
    <string name="submit">Submit</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="hint_new_password">Enter new password</string>
    <string name="hint_confirm_password">Confirm password should be same as new password</string>
    <string name="hint_title">Title</string>
    <string name="helper_title">Homework Title</string>
    <string name="hint_remarks">Remarks</string>
    <string name="helper_remarks">Homework remarks if any</string>
    <string name="hint_description">Description</string>
    <string name="helper_description">Homework Description</string>
    <string name="label_add">Add</string>
    <string name="helper_subject_description">Write here some subject description</string>
    <string name="label_subject_description">Subject Description</string>
    <string name="label_terms">Terms</string>
    <string name="label_policy">Policy</string>
    <string name="helper_confirm_password">Enter confirm password</string>
    <string name="version_dash">Version:</string>
    <string name="msg_title_required">Title is required</string>
    <string name="msg_description_required">Description is required</string>
    <string name="msg_absent">Absent</string>
    <string name="msg_no_student_found">No students found</string>
    <string name="msg_present">Present</string>
    <string name="msg_send_email">Send email...</string>
    <string name="msg_invalid_url">Not a valid URL</string>
    <string name="msg_select_pdf">Select Pdf</string>
    <string name="msg_invalid_pdf">Please select a valid pdf file</string>
    <string name="msg_wait_upload_syllabus">Please wait while we upload the syllabus.</string>
    <string name="msg_school_id_required">School Id is required</string>
    <string name="msg_dob_required">DOB is required</string>
    <string name="msg_please_wait">Please wait...</string>
    <string name="msg_new_password_required">New password is required</string>
    <string name="msg_confirm_password_required">Confirm password is required</string>
    <string name="msg_password_dont_match">Password do not match</string>
    <string name="label_whatsapp">WhatsApp</string>
    <string name="whatsapp_description">Send message directly through WhatsApp</string>
    <string name="youtube">YouTube</string>
    <string name="msg_failed_load_pdf">Failed to load the pdf. Please try again later</string>
    <string name="view_syllabus">View Syllabus</string>
    <string name="view_homework">View Homework</string>
    <string name="exit_application">Press back again to exit Apszone app.</string>
    <string name="title_logout">Logout?</string>
    <string name="msg_logout">Are you sure to logout from Apszone App?</string>
    <string name="msg_dialog_positive">LOG OUT</string>
    <string name="msg_dialog_negative">NOT NOW</string>
    <string name="label_location">Location</string>
    <string name="location_description">Google Maps direction to our school</string>
    <string name="label_upload">Upload</string>
    <string name="label_download">Download</string>
    <string name="label_view">View</string>
    <string name="msg_downloading">Downloading</string>
    <string name="time_sec_ago">&#160;sec ago</string>
    <string name="time_min_ago">&#160;min ago</string>
    <string name="time_mins_ago">&#160;mins ago</string>
    <string name="time_hour_ago">&#160;hour ago</string>
    <string name="time_hours_ago">&#160;hours ago</string>
    <string name="time_day_ago">&#160;day ago</string>
    <string name="time_days_ago">&#160;days ago</string>
    <string name="type_father">Father</string>
    <string name="type_mother">Mother</string>
    <string name="type_guardian">Guardian</string>
    <string name="msg_cancel">Cancel</string>
    <string name="msg_settings">Settings</string>
    <string name="admission_fee">Admission Fee</string>
    <string name="annual_fee">Annual Fee</string>
    <string name="activity_fee">Activity Fee</string>
    <string name="computer_fee">Computer Fee</string>
    <string name="basic_fee_information">Basic Fee Information</string>
    <string name="toolbar_downloads">Downloads</string>
    <string name="toolbar_feedback">Feedback</string>
    <string name="text_write_feedback">Write feedback (optional)</string>
    <string name="submit_feedback">Submit Feedback</string>
    <string name="msg_rating_required">Please give rating to all the teachers</string>
    <string name="toolbar_youtube">YouTube</string>
    <string name="toolbar_accounts">Accounts</string>
    <string name="add_account">Add account</string>
    <string name="toolbar_learn">Learn</string>
    <string name="toolbar_videos">Videos</string>
    <string name="recommended_videos">Recommended Videos</string>
    <string name="whatsapp_not_installed">WhatsApp is not installed in your device.</string>

    <string-array name="day">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <string-array name="month">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

</resources>
