<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    android:padding="@dimen/activity_horizontal_margin">

    <TextView
        android:id="@+id/tvInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_8"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/label_subject_description"
        android:textColor="@color/black_90"
        android:textSize="@dimen/text_18" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_description"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvInfo"
        android:layout_marginBottom="@dimen/dp_8"
        android:clipToPadding="false"
        android:hint="@string/hint_description"
        app:errorEnabled="true"
        app:helperText="@string/helper_subject_description">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:imeOptions="actionNext"
            android:inputType="textCapSentences"
            android:nextFocusDown="@+id/add_syllabus" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/add_syllabus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/til_description"
        android:layout_alignParentEnd="true"
        android:background="@drawable/corner_style_no_padding"
        android:text="@string/label_add"
        android:textColor="@color/lightPrimary"
        tools:ignore="UnusedAttribute" />

</RelativeLayout>






